# aether

./: .clang-format  .gitignore  LICENSE  README.md  aether.scm  flake.nix  format.sh  keybindings.conf  meson.build  minimize.c  scratch_grep_move.sh
aether/: AetherCore-designer-state.json  AetherCore-user.css  AetherCore.json  app-menu-pinned.conf  autostart.sh  config.conf  exec.conf  keybindings.conf  panel-designer-state.json  panel-user.css  panel.json  rules.conf
assets/: aether.desktop  config.conf
conf/: config.conf  env.conf  exec.conf  keybindings.conf  rules.conf
docs/: faq.md  index.md  installation.md  ipc.md  meta.json  nix-options.md  quick-start.md  screenshot.md
docs/bindings/: index.mdx  keys.md
docs/configuration/: basics.md  index.mdx  input.md  miscellaneous.md  monitors.md  xdg-portals.md
docs/visuals/: animations.md  status-bar.md  theming.md
docs/window-management/: layouts.md  scratchpad.md
include/config/: config_defaults.h  config_exec.h  config_free.h  config_input.h  config_parse.h  config_reapply.h  config_types.h  config_utils.h  parse_config.h  parse_config.h.bak
include/data/: static_keymap.h
include/dispatch/: bind_define.h
include/fetch/: client.h
include/layout/: dwindle.h  floating.h  layout.h  scroll.h  vertical.h
mmsg/: mmsg.c
nix/: default.nix  generate-options.nix  hm-modules.nix  lib.nix  nixos-modules.nix
protocols/: aether-ipc-unstable-x.xml  dwl-ipc-unstable-v2.xml  meson.build
src/: aether.c
src/animation/: client.h
src/client/: client.h
src/config/: parse_config.h
src/core/: compositor_setup.c  layers_popups.c
src/dispatch/: bind_declare.h  bind_define.h
src/ext-protocol/: aether-ipc.h  all.h  ext-workspace.h  text-input.h  wlr_ext_workspace_v1.c  wlr_ext_workspace_v1.h
src/fetch/: client.h  monitor.h
src/layout/: arrange.h  horizontal.h  layout.h  scroll.h  vertical.h
subprojects/: scenefx.wrap  wlroots.wrap
